--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </form>
         <div class="menu_icons">
             <a href="#">
-                <img src="media/video.svg" alt="upload video">
+                <img src="media/video.svg" alt="upload video" class="video">
             </a>
             <a href="#">
-                <img src="media/bell.svg" alt="bell icon">
+                <img src="media/bell.svg" alt="bell icon" class="bell">
             </a>
             <a href="#">
                 <img class="menu_channel_icon" src="https://unsplash.it/36/36?gravity=center" alt="your channel">
